--- a/Mario/Mario.vcxproj.filters
+++ b/Mario/Mario.vcxproj.filters
@@ -13,10 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="ソース ファイル\helper">
+      <UniqueIdentifier>{d8a5eb22-998c-4c44-8a95-001bd358311c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="scripts\helper\DxLibHelper.cpp">
+      <Filter>ソース ファイル\helper</Filter>
+    </ClCompile>
     <ClCompile Include="scripts\main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="scripts\helper\DxLibHelper.h">
+      <Filter>ソース ファイル\helper</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
