--- a/Mario/Mario.vcxproj
+++ b/Mario/Mario.vcxproj
@@ -147,7 +147,9 @@
     <ClCompile Include="scripts\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="scripts\GameManager.hpp" />
     <ClInclude Include="scripts\helper\DxLibHelper.h" />
+    <ClInclude Include="scripts\Stage.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
