--- a/Mario/Mario.vcxproj
+++ b/Mario/Mario.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="scripts\GameManager.hpp" />
     <ClInclude Include="scripts\helper\DxLibHelper.h" />
+    <ClInclude Include="scripts\Mario.hpp" />
     <ClInclude Include="scripts\Stage.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
