--- a/Mario/Mario.vcxproj.filters
+++ b/Mario/Mario.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="scripts\Mario.hpp">
       <Filter>ソース ファイル\game</Filter>
     </ClInclude>
+    <ClInclude Include="scripts\SpriteMana.hpp">
+      <Filter>ソース ファイル\game</Filter>
+    </ClInclude>
+    <ClInclude Include="scripts\Vector2.hpp">
+      <Filter>ソース ファイル\game</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
