--- a/Mario/Mario.vcxproj
+++ b/Mario/Mario.vcxproj
@@ -150,8 +150,10 @@
     <ClInclude Include="scripts\GameManager.hpp" />
     <ClInclude Include="scripts\helper\DxLibHelper.h" />
     <ClInclude Include="scripts\Mario.hpp" />
+    <ClInclude Include="scripts\PlayManager.hpp" />
     <ClInclude Include="scripts\SpriteAnimation.hpp" />
     <ClInclude Include="scripts\Stage.hpp" />
+    <ClInclude Include="scripts\TitleManager.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
